Correction complète du site professionnel

--- a/index.html
+++ b/index.html
@@ -3,18 +3,29 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>candidate-pro-dashboard</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>JobTracker Pro - Gestionnaire de Candidatures Professionnel</title>
+    <meta name="description" content="Plateforme professionnelle de gestion de candidatures avec intelligence artificielle. Organisez votre recherche d'emploi efficacement." />
+    <meta name="author" content="JobTracker Pro" />
+    <meta name="keywords" content="candidatures, emploi, recrutement, CV, entretiens, carrière, professionnel" />
 
-    <meta property="og:title" content="candidate-pro-dashboard" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="JobTracker Pro - Gestionnaire de Candidatures" />
+    <meta property="og:description" content="Plateforme professionnelle pour optimiser votre recherche d'emploi" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?w=1200&h=630&fit=crop" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@jobtracker_pro" />
+    <meta name="twitter:title" content="JobTracker Pro - Gestionnaire de Candidatures" />
+    <meta name="twitter:description" content="Optimisez votre recherche d'emploi avec notre plateforme professionnelle" />
+    <meta name="twitter:image" content="https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?w=1200&h=630&fit=crop" />
+    
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <link rel="apple-touch-icon" href="/favicon.ico" />
+    
+    <!-- Preconnect pour améliorer les performances -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://images.unsplash.com">
   </head>
 
   <body>
